undo footer copyright change to fix contrast issue and bugfix for gitlab hover effect

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -64,13 +64,9 @@ footer label {
   border: none;
 }
 
-.footer-credits a {
-  color: $details-color;
-}
-
-.footer-credits a:hover {
-  color: #333;
-}
+// .footer-credits a:hover {
+//   color: #333;
+// }
 
 .footer_social-icons {
   width: 100%;
